fix z-index for offline notification

--- a/src/style/components/_offline-notice.scss
+++ b/src/style/components/_offline-notice.scss
@@ -1,5 +1,6 @@
 .c-offlineNotice {
   position: fixed;
+  z-index : 1;
   display : none;
 
   top : 0;
